Closed Bug 416063 Opened 18 years ago Closed 18 years ago

"Save this password?" dialog has "Never Save" focused instead of "Don't Save" with FKA on (again!)

Categories

(Camino Graveyard :: General, defect)

1.8 Branch
All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.6

People

(Reporter: mark, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: fixed1.8.1.13)

Attachments

(1 file)

407498 all over again. 413763?
Gah, we've got to stop regressing this ;)
Flags: camino1.6b3?
Keywords: regression
-'ing for b3 since it would be a code-only fix, but we should fix the regression for 1.6 final.
Flags: camino1.6b3? → camino1.6b3-
Target Milestone: --- → Camino1.6
Attached patch fixSplinter Review
Take 3 ;)
Assignee: nobody → stuart.morgan
Status: NEW → ASSIGNED
Attachment #304041 - Flags: superreview?(mark)
Attachment #304041 - Flags: superreview?(mark) → superreview?(mikepinkerton)
Attachment #304041 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk and MOZILLA_1_8_BRANCH. Let's hope it stays dead this time.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: