Camino only - Bug 416063: Don't focus 'Never Save' with FKA enabled (again). r/sr=pink