camino/src/formfill/KeychainService.mm
@@ -606,7 +606,8 @@ int KeychainPrefChangedCallback(const char* inPref, void* unused)
   [neverStore setKeyEquivalent:@"n"];
   [neverStore setKeyEquivalentModifierMask:NSCommandKeyMask];
 
-  [[alert window] setInitialFirstResponder:dontStore];
+  if ([dontStore canBecomeKeyView])
+    [[alert window] makeFirstResponder:dontStore];
   [alert beginSheetModalForWindow:window
                     modalDelegate:self
                    didEndSelector:@selector(storeSheetDidEnd:returnCode:contextInfo:)
